Fix category edit button (#603)
* 💄  Fix category layout shifting

* 🚨  Remove comment

--- a/src/style.css
+++ b/src/style.css
@@ -945,11 +945,12 @@ blockquote p:before {
 }
 
 .cat-title-grid-container {
-  display: grid;
-  grid-template-columns: auto auto;
-  padding: 1rem 1.5rem;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0.5rem 1.5rem;
   background-color: #f5f5f5;
-  min-height: 90px;
+  min-height: 4.25rem;
 }
 
 .cat-title-grid-container h2.cat-title {
